# mipt-ded-optics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
canvas-example/: CMakeLists.txt  main.cpp
dr4-sdl2/: CMakeLists.txt  drawables.cpp  drawables.hpp  plugin.cpp  window.cpp  window.hpp
imm-dr4/: CMakeLists.txt  README  imm_dr4.cpp
imm-dr4/include/: imm_dr4.hpp
ln/: CMakeLists.txt
ln/include/lenses/: file_picker.h  screenshot.h
ln/include/lenses/ui/: scene_tree.h  tool.h  toolbox.h
ln/include/math/: gfxcommon.h  ray3f.h  vec3f.h
ln/include/rtr/: common.h  renderer.h  sgui-view.h  sgui-view.h.bk
ln/src/: main.cpp
ln/src/lenses/: file_picker.cpp  screenshot.cpp
ln/src/lenses/tools/: gnd.cpp  mesh.cpp  object.cpp  sphere.cpp
ln/src/lenses/ui/: scene_tree.cpp  tool.cpp  toolbox.cpp
ln/src/math/: gfxcommon.cpp
ln/src/rtr/: renderer.cpp  sgui-view.cpp  sgui-view.cpp.bk
plugin-inspector/: CMakeLists.txt  inspector.cpp  sample-plugin.cpp
plugins/pp/: libArtemLine.so.disabled  libArtemText.so.disabled  libDenchik.so.disabled  libSeva.so.disabled  libSeva2.so.disabled
pp-toolbox/: CMakeLists.txt  base.cpp  base.hpp  circle.hpp  line.hpp  plugin.cpp  rectlike.hpp
resfile/: CMakeLists.txt  a.out  copy.res  example.res  format.txt  packer.py  resfile.cpp  test.cpp
resfile/example/: blob.as.d  blob.txt  dict.as
resfile/example/sub/: other.as
resfile/include/: resfile.hpp
sgui/: CMakeLists.txt  respack.py
sgui/example/: basic.cpp
sgui/include/sgui/: event.h  menu.hpp  root.hpp  theme.hpp  ui.hpp  widget.hpp
sgui/include/sgui/box/: box.hpp  scrollbox.hpp  window.hpp
sgui/include/sgui/input/: button.hpp  textedit.hpp
sgui/include/sgui/view/: text.hpp
sgui/res/: font.as  window.as  window.image.as
sgui/src/sgui/: menu.cpp
sgui/src/sgui/box/: box.cpp  scrollbox.cpp  window.cpp
sgui/src/sgui/input/: button.cpp  textedit.cpp
sgui/src/sgui/view/: text.cpp
